tolk-tester/tests/invalid-symbol/err-2190.tolk
enum Color {
    Red,
    Green,
    Blue,
}

fun main(c: Color) {
    c.Red
}

/**
@compilation_should_fail
@stderr field `Red` doesn't exist in type `Color` 
 */
